# LeatherMC

./: .gitattributes  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr-title.yml
crates/datagen/: Cargo.toml
crates/datagen/src/: convert.rs  items.rs  main.rs  tags.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: error.rs  lib.rs  nbt.rs  packet.rs  varint.rs
crates/server/: Cargo.toml
crates/server/src/: chunk.rs  config.rs  configuration.rs  connection.rs  entity.rs  fluid.rs  lib.rs  login.rs  main.rs  mob.rs  play.rs  projectile.rs  registries.rs  status.rs  world.rs  worldgen.rs
crates/server/src/worldgen/: density.rs  md5.rs  mod.rs  noise.rs  noises.rs  rng.rs
crates/server/tests/: login.rs  ping.rs
docs/: mob-abilities.md
