[workspace]
resolver = "2"
members = ["crates/protocol", "crates/server"]

[workspace.package]
version = "0.0.1-alpha"
edition = "2024"
license = "MIT"
authors = ["Arklandia Studios"]
repository = "https://github.com/ArklandiaStudios/LeatherMC"

[workspace.dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "macros", "signal"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"

# Smaller, faster release binaries for the Docker/scratch image.
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
