[package]
name = "leather-protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Minecraft wire-protocol primitives (VarInt, packet framing) for LeatherMC."

[dependencies]
tokio = { workspace = true }
thiserror = { workspace = true }
